--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ package-mode = false
 # See: https://python-poetry.org/docs/managing-dependencies/#dependency-groups
 python = ">=3.10,<3.12"
 opensoundscape = "0.12.0"
+tensorflow = "^2.19.0"
 
 [build-system]
 requires = ["poetry-core>=1.5.0"]
